# dyre

./: .gitignore  .travis.yml  CHANGELOG.md  Dyre.hs  LICENSE  Main.hs  README.mkd  TestDyre.hs  dyre.cabal  dyre.mkd
.github/workflows/: actions.yml  haskell-ci.yml  macos.yml
Config/: Dyre.hs
Config/Dyre/: Compat.hs  Compile.hs  Exec.hs  Launch.hs  Options.hs  Params.hs  Paths.hs  Relaunch.hs  Util.hs
Dyre/: Compile.hs  Exec.hs  Launch.hs  Params.hs
TestDyre/: Boot.hs  Main.hs
Tests/: README.mkd  allTests.sh  subr.sh
Tests/basic/: BasicTest.hs  Lib.hs  Main.hs  MyConfig-updated.hs  MyConfig.hs  badConfig.hs  goodConfig.hs  moduleConfig.hs  runTest.sh
Tests/config-check/: ConfigCheckTest.hs  Lib.hs  Main.hs  configCheckTestA.hs  configCheckTestB.hs  runTest.sh
Tests/recompile-relaunch/: Lib.hs  Main.hs  RecompileRelaunchTest.hs  recompileRelaunchTest.hs  runTest.sh
Tests/threaded/: Lib.hs  Main.hs  ThreadedTest.hs  runTest.sh  threadedTest.hs
test/: Main.hs
