name:          dyre
version:       0.9.2
category:      Development, Configuration
synopsis:      Dynamic reconfiguration in Haskell

description:   Dyre implements dynamic reconfiguration facilities after the
               style of Xmonad. Dyre aims to be as simple as possible without
               sacrificing features, and places an emphasis on simplicity of
               integration with an application.

               A full introduction with a complete example project can be found
               in the documentation for 'Config.Dyre'

homepage:      http://github.com/willdonnelly/dyre
bug-reports:   http://github.com/willdonnelly/dyre/issues
stability:     beta
author:        Will Donnelly
maintainer:    Fraser Tweedale <frase@frase.id.au>
copyright:     (c) 2011-2023 Will Donnelly, Fraser Tweedale
license:       BSD3
license-file:  LICENSE

build-type:    Simple
cabal-version: >= 1.10
tested-with: GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.1

extra-source-files:
    CHANGELOG.md
    Tests/README.mkd
    Tests/*.sh
    Tests/basic/*.hs
    Tests/basic/*.sh
    Tests/config-check/*.hs
    Tests/config-check/*.sh
    Tests/recompile-relaunch/*.hs
    Tests/recompile-relaunch/*.sh
    Tests/threaded/*.hs
    Tests/threaded/*.sh

source-repository head
  type:      git
  location:  git://github.com/willdonnelly/dyre.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules: Config.Dyre,
                   Config.Dyre.Paths,
                   Config.Dyre.Compat,
                   Config.Dyre.Params,
                   Config.Dyre.Options,
                   Config.Dyre.Compile,
                   Config.Dyre.Relaunch
  build-depends:
    base >= 4.8 && < 5
    , binary
    , directory >= 1.2.0.0
    , executable-path
    , filepath
    , io-storage
    , process
    , time
    , xdg-basedir

  if os(windows)
      build-depends: Win32
  else
      build-depends: unix

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:
    base
    , directory >= 1.2.0.0
    , process
    , dyre
