cabal-version: 2.2
name:          dyre
version:       0.9.2
category:      Development, Configuration
synopsis:      Dynamic reconfiguration in Haskell

description:   Dyre implements dynamic reconfiguration facilities after the
               style of Xmonad. Dyre aims to be as simple as possible without
               sacrificing features, and places an emphasis on simplicity of
               integration with an application.

               A full introduction with a complete example project can be found
               in the documentation for 'Config.Dyre'

homepage:      http://github.com/willdonnelly/dyre
bug-reports:   http://github.com/willdonnelly/dyre/issues
stability:     beta
author:        Will Donnelly
maintainer:    Fraser Tweedale <frase@frase.id.au>
copyright:     (c) 2011-2023 Will Donnelly, Fraser Tweedale
license:       BSD-3-Clause
license-file:  LICENSE

build-type:    Simple
tested-with:   GHC ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2 || ==9.14.1

extra-doc-files:
    CHANGELOG.md

extra-source-files:
    Tests/README.mkd
    Tests/*.sh
    Tests/basic/*.hs
    Tests/basic/*.sh
    Tests/config-check/*.hs
    Tests/config-check/*.sh
    Tests/recompile-relaunch/*.hs
    Tests/recompile-relaunch/*.sh
    Tests/threaded/*.hs
    Tests/threaded/*.sh

source-repository head
  type:      git
  location:  https://github.com/willdonnelly/dyre.git

common common
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.18 && < 5
    , directory >= 1.2.0.0
    , process

library
  import: common
  exposed-modules: Config.Dyre,
                   Config.Dyre.Paths,
                   Config.Dyre.Compat,
                   Config.Dyre.Params,
                   Config.Dyre.Options,
                   Config.Dyre.Compile,
                   Config.Dyre.Relaunch
  build-depends:
    , binary
    , executable-path
    , filepath
    , io-storage
    , time
    , xdg-basedir

  if os(windows)
      build-depends: Win32
  else
      build-depends: unix

test-suite tests
  import: common
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
